Publication list updated.

--- a/papers/2020s/23/Moore_etal_2023_JGRF.bib
+++ b/papers/2020s/23/Moore_etal_2023_JGRF.bib
@@ -4,10 +4,9 @@
   title   = {Reduced ice loss from {Greenland} under stratospheric aerosol
             injection},
   journal = {Journal of Geophysical Research: Earth Surface},
-  volume  = {N/A},
-  number  = {N/A},
-  pages   = {N/A},
+  volume  = {128},
+  number  = {11},
+  pages   = {e2023JF007112},
   doi     = {10.1029/2023JF007112},
-  note    = {In press},
   year    = {2023}
 }
