Publication list updated.

--- a/papers/2020s/23/Moore_etal_2023_JGRF.bib
+++ b/papers/2020s/23/Moore_etal_2023_JGRF.bib
@@ -1,4 +1,4 @@
-﻿@article{moore_etal_2023,
+@article{moore_etal_2023_jgrf,
   author  = {Moore, J. C. and Greve, R. and Yue, C. and Zwinger, T.
             and Gillet-Chaulet, F. and Zhao, L.},
   title   = {Reduced ice loss from {Greenland} under stratospheric aerosol
