--- a/papers/2020s/23/Seroussi_etal_2023_TC.bib
+++ b/papers/2020s/23/Seroussi_etal_2023_TC.bib
@@ -1,4 +1,4 @@
-@article{seroussi_etal_2023,
+@article{seroussi_etal_2023_tc,
   author  = {Seroussi, H. and Verjans, V. and Nowicki, S. and Payne, A. J.
             and Goelzer, H. and Lipscomb, W. H. and Abe-Ouchi, A. and Agosta, C.
             and Albrecht, T. and Asay-Davis, X. and Barthel, A. and Calov, R.
