--- a/papers/2020s/23/Greve_etal_2023_JoG.bib
+++ b/papers/2020s/23/Greve_etal_2023_JoG.bib
@@ -4,6 +4,9 @@
   title   = {Future projections for the {Antarctic} ice sheet until the
             year 2300 with a climate-index method},
   journal = {Journal of Glaciology},
+  volume  = {69},
+  number  = {278},
+  pages   = {1569-1579},
   doi     = {10.1017/jog.2023.41},
   year    = {2023}
 }
