Publication list updated.

--- a/papers/2000s/06/Greve_etal_2006_PMG.bib
+++ b/papers/2000s/06/Greve_etal_2006_PMG.bib
@@ -5,5 +5,6 @@
   journal = {Polar Meteorology and Glaciology},
   volume  = {20},
   pages   = {1-15},
+  doi     = {10.15094/00003000},
   year    = {2006}
 }
